Fix gap in theme text colors

--- a/site/css/theme_display.css
+++ b/site/css/theme_display.css
@@ -55,22 +55,25 @@
 
 .tt1 {
 	width: 100%;
-	height: 50%;
+	height: 52%;
 	border-top-left-radius: inherit;
 	border-top-right-radius: inherit;
+	transform: translateY(4%);
 }
 
 .tt2 {
 	width: 100%;
-	height: 50%;
+	height: 52%;
 	border-bottom-left-radius: inherit;
 	border-bottom-right-radius: inherit;
+	transform: translateY(-4%);
 }
 
 @keyframes spin {
 	from {
 		transform: rotate(0deg);
 	}
+
 	to {
 		transform: rotate(360deg);
 	}
